--- a/demo-mvc/pom.xml
+++ b/demo-mvc/pom.xml
@@ -45,31 +45,30 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>webjars-locator-core</artifactId>
+		</dependency>	
 		<dependency>
 		    <groupId>org.webjars</groupId>
 		    <artifactId>jquery</artifactId>
 		    <version>3.5.1</version>
 		</dependency>
-		
 		<dependency>
-		    <groupId>org.webjars</groupId>
-		    <artifactId>bootstrap</artifactId>
-		    <version>4.5.0</version>
+    		<groupId>org.webjars</groupId>
+    		<artifactId>bootstrap</artifactId>
+    		<version>4.0.0</version>
 		</dependency>
-		
 		<dependency>
 		    <groupId>org.webjars.bower</groupId>
 		    <artifactId>open-iconic</artifactId>
 		    <version>1.1.1</version>
 		</dependency>
-		
 		<dependency>
 		    <groupId>org.webjars.bower</groupId>
 		    <artifactId>jquery-mask-plugin</artifactId>
 		    <version>1.14.15</version>
 		</dependency>
-		
 	</dependencies>
 
 	<build>
